--- a/transmitter.html
+++ b/transmitter.html
@@ -4,6 +4,8 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/milligram/1.3.0/milligram.css">
     <link rel="stylesheet" href="https://milligram.github.io/styles/main.css">
+
+    <script type="text/javascript" src="js/flicker.js"></script>
   </head>
 
   <body>
@@ -20,18 +22,14 @@
     </main>
 
     <script type="text/javascript">
-      const flicker = document.getElementById('flicker-screen');
-      const ctx = flicker.getContext('2d');
+      const canvas = document.getElementById('flicker-screen');
 
       function setupCanvas() {
-        flicker.width = bg.width;
-        flicker.height = bg.height;
+        canvas.width = bg.width;
+        canvas.height = bg.height;
 
-        drawBackground();
-      }
-
-      function drawBackground() {
-        ctx.drawImage(bg, 0, 0);
+        const flicker = new Flicker(canvas, bg, 0.03);
+        flicker.startFlicker(60);
       }
 
       const bg = new Image();
