--- a/receiver.html
+++ b/receiver.html
@@ -75,9 +75,11 @@
       // FFT configuration
       const buffer = [];
       const fft_size = 64;
-      const fft_scale = 8;
+      const fft_h_scale = 8;
+      const fft_v_scale = 1/20;
       const fft_low_bin = 5;
       const fft_high_bin = 10;
+      let fft_threshold = 0;
 
       function drawFrame() {
         if (camera_canvas.width != video.videoWidth) {
@@ -92,15 +94,19 @@
         if (buffer.length >= fft_size) {
           // calculate FFT and show raw values
           let fft_mag = getFFT(buffer);
-          output.innerHTML = fft_mag;
+          updateFFTThreshold(fft_mag);
 
           // draw FFT and markers
-          drawFrame(fft_ctx, fft_canvas, fft_mag);
+          drawFFT(fft_ctx, fft_canvas, fft_mag);
+          drawLine(fft_ctx, fft_low_bin * fft_h_scale, 0,
+            fft_low_bin * fft_h_scale, fft_canvas.height);
+          drawLine(fft_ctx, fft_high_bin * fft_h_scale, 0,
+            fft_high_bin * fft_h_scale, fft_canvas.height);
+          drawLine(fft_ctx, 0, fft_threshold * fft_v_scale,
+            fft_mag.length*8, fft_threshold * fft_v_scale);
 
-          drawLine(fft_ctx, fft_low_bin * fft_scale, 0,
-            fft_low_bin * fft_scale, fft_canvas.height);
-          drawLine(fft_ctx, fft_high_bin * fft_scale, 0,
-            fft_high_bin * fft_scale, fft_canvas.height);
+          output.innerHTML = getFFTPeak(fft_mag,
+            fft_low_bin, fft_high_bin);
 
           // slide window
           for (let i = fft_size/2-1; i >= 0; i--) {
@@ -132,11 +138,15 @@
         return mag;
       }
 
+      function updateFFTThreshold(fft) {
+        fft_threshold = fft[0] * 0.05;
+      }
+
       function drawFFT(context, canvas, fft) {
         context.clearRect(0, 0, fft.length*8, canvas.height);
         context.beginPath();
         for (let i = fft.length - 1; i >= 0; i--) {
-          context.lineTo(i*8, fft[i]/20);
+          context.lineTo(i*fft_h_scale, fft[i]*fft_v_scale);
         }
         context.strokeStyle = '#000000';
         context.lineWidth = 1;
@@ -145,11 +155,28 @@
 
       function drawLine(context, x0, y0, x1, y1) {
         context.beginPath();
-        context.lineTo(5 * 8, 0);
-        context.lineTo(5 * 8, fft_canvas.height);
+        context.lineTo(x0, y0);
+        context.lineTo(x1, y1);
         context.strokeStyle = '#FF0000';
         context.lineWidth = 1;
         context.stroke();
+      }
+
+      function getFFTPeak(fft, low_bin, high_bin) {
+        let low_bin_mag = fft[low_bin];
+        let high_bin_mag = fft[high_bin];
+
+        if (low_bin_mag > high_bin_mag) {
+          if (low_bin_mag > fft_threshold) {
+            return 1;
+          }
+        } else if (high_bin_mag > low_bin_mag) {
+          if (high_bin_mag > fft_threshold) {
+            return 2;
+          }
+        }
+
+        return 0;
       }
     </script>
   </body>
